--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#services" class="smoothscroll">Products</a></li>
                         <li><a href="#folio" class="smoothscroll">Affiliation</a></li>
-                        <li><a href="#footer" class="smoothscroll">Coasfntact</a></li>
+                        <li><a href="#footer" class="smoothscroll">Contact</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <ul class="s-header__social">
